# Simple-ICP

./: CMakeLists.txt  README.md  main.cpp
Algorithms/: AbstractIcp.cpp  AbstractIcp.h  Gicp.cpp  Gicp.h  Icp.cpp  Icp.h
Data/: tea.ply
Viewer/: Viewer.cpp  Viewer.h
